# opengl_tutorial_cpp

./: .gitignore  CMakeLists.txt  InputProcessor.cpp  InputProcessor.h  ReadMe.md  env.cmake  gl_func_adapter.h  main.cpp
renderer/: Cube.cpp  Cube.h  Director.cpp  Director.h  IRenderer.cpp  IRenderer.h  MultiBars.cpp  MultiBars.h  Sprite.cpp  Sprite.h
renderer/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vertex.h
resources/shaders/triangle/: fs.glsl  fs_color.glsl  fs_fix_color.glsl  fs_image_directional_light.glsl  fs_image_light.glsl  fs_image_point_light.glsl  fs_image_spot_light.glsl  fs_model.glsl  fs_single_image.glsl  fs_uniform_color.glsl  vs.glsl
shader/: ShaderLoader.cpp  ShaderLoader.h  ShaderProgram.h
